# my-gym-diary

./: .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.debug.yml  docker-compose.yml  manage.py  pyproject.toml  requirements_app.txt  requirements_dev.txt  rxconfig.py
accounts/migrations/: 0001_initial.py
alembic/versions/: 4eff186a3a46_.py  506f91f14208_.py  ff197482c492_.py
app/: main.py  models.py
my_gym_diary/: asgi.py  models.py  my_gym_diary.py  settings.py  urls.py  wsgi.py
my_gym_diary/components/: sidebar.py
my_gym_diary/pages/: dashboard.py  index.py  settings.py
my_gym_diary/templates/: template.py
tests/: test_workouts.py
workouts/: admin.py  charts.py  forms.py  models.py  urls.py  views.py
workouts/management/commands/: load_workouts.py
workouts/migrations/: 0001_initial.py  0002_alter_exercise_description.py  0002_workout_unique_date.py  0003_alter_exercise_code_alter_exercise_name.py  0004_alter_exercise_code_alter_exercise_name.py  0004_setofexercise_volume_alter_setofexercise_weight.py  0005_setofexercise.py
workouts/templates/: workouts.html
workouts/templates/workouts/: activity_chart.html  chart.html  dashboard.html  index.html  workouts.html
workouts/tests/: test_models.py
workouts/tests/data/excel/: correct_1workout_2exercise.xlsx  correct_3workout_3exercise.xlsx  correct_no_notes.xlsx
workouts/tests/data/set_of_exercise/: correct_with_notes.xlsx
