[project]
name = "my-gym-diary"
authors = [
    {name = "Enrico Gandini", email = "enricogandini93@gmail.com"},
]
description = "Web app to track your gym workouts"
readme = "README.md"
requires-python = ">=3.12, <4"
license = {file = "LICENSE.txt"}
version = "0.1.0"

[tool.ruff]
select = ["F", "I"]

[tool.ruff.isort]
known-local-folder = ["my_gym_diary"]