[project]
name = "my-gym-diary"
authors = [
    {name = "Enrico Gandini", email = "enricogandini93@gmail.com"},
]
description = "Web app to track your gym workouts"
readme = "README.md"
requires-python = ">=3.12, <4"
license = {file = "LICENSE.txt"}
version = "0.1.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic",
    "migrations",
]
select = ["F", "I"]

[tool.ruff.isort]
known-local-folder = ["my_gym_diary"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "my_gym_diary.settings"